# libpaw_interface

./: CMakeLists.txt  README.md  libpaw.h  m_libpaw_defs.F90  m_libpaw_mpi.F90  m_libpaw_tools.F90  m_paral_atom.F90  m_paw_an.F90  m_paw_finegrid.F90  m_paw_gaussfit.F90  m_paw_ij.F90  m_pawcprj.F90  m_pawdij.F90  m_pawfgrtab.F90  m_pawpsp.F90  m_pawrad.F90  m_pawrhoij.F90  m_pawtab.F90  m_pawxc.F90
abi_add/: CMakeLists.txt  defs_fftdata.F90  m_atm2fft.F90  m_cgtools.F90  m_fft.F90  m_fftcore.F90  m_kg.F90  m_mkrho.F90  m_sg2002.F90
abi_add_paw/: CMakeLists.txt  m_paw_denpot.F90  m_paw_dfpt.F90  m_paw_init.F90  m_paw_nhat.F90  m_paw_occupancies.F90
abi_xc_lowlevel/: CMakeLists.txt  m_drivexc.F90  xc_m_xc_noncoll.F90  xc_m_xclda.F90
test/: 0_libpaw_mod.f90  CMakeLists.txt  fortran_main.f90  get_dij.f90  get_nhat.f90  get_vloc_ncoret.f90  init_rho.f90  input  main.cpp  map_atom_index.f90  paw_force.f90  pawfiles  prepare_libpaw.f90  set_rhoij.f90  test_main.f90
xc_add/: xc_invcb.F90  xc_m_libxc_functionals.F90  xc_m_xc_noncoll.F90  xc_m_xchcth.F90  xc_m_xciit.F90  xc_m_xcpbe.F90  xc_m_xcpositron.F90
